[package]
name = "actix-gql-ws-stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
async-graphql = "6.0.11"
async-graphql-actix-web = "6.0.11"
slab = "0.4.9"
tokio = "1.34.0"
tokio-stream = "0.1.14"
futures-util = "0.3.0"
futures-channel = "0.3.0"
once_cell = "1.0"
futures-timer = "3.0.2"
async-stream = "0.3.0"
actix-web-lab = "0.20.1"
